--- a/KSS/KSS/student-app/src/components/styles/NavMenu.css
+++ b/KSS/KSS/student-app/src/components/styles/NavMenu.css
@@ -53,7 +53,7 @@ header a.logo {
 }
 .link.signup-login {
     width: 225px;
-    margin-left: 197px;
+    margin-left: 203px;
 }
 .link.dashboard {
     width: 130px;
